--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,6 @@ futures = "0.3.15"
 notify = "4.0.17"
 static_init = { git = "https://gitlab.com/vkahl/static_init.git" }
 rust-ini = "0.17.0"
-sled = "0.34.6"
 tide = "0.16.0"
 #rust-ini = "0.17.0"
 #wickdb = {git="https://github.com/Fullstop000/wickdb.git", branch="master"}
@@ -59,4 +58,6 @@ tide = "0.16.0"
 version = "1.9.0"
 features = ["unstable","attributes"]
 
-
+[dependencies.sled]
+version = "0.34.6"
+features = ["compression"]
