--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,10 @@ tide = "0.16.0"
 #version = "1.9.0"
 #features = ["unstable","attributes"]
 
+[dependencies.sqlx]
+version = "0.5"
+features = ["runtime-async-std-rustls","sqlite","macros"]
+
 [dependencies.async-std]
 version = "1.9.0"
 features = ["unstable","attributes"]
